MyListAnalyzerDash/misc/general-dashboard.css
@import url("/MLA/assets/user-view.css");
@import url("https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css");


.scroll-board{height: calc(97% - 20px) !important; flex-shrink: 1;}

.number-card{
    width: calc(1.5vw + 96px);
    height: 45px;
    max-width: 200px;
}

#time_spent{width: 197px;}

#time_spent .swiper-slide{
    height: 45px;
    margin-top: auto;
    margin-bottom: auto;
    width: 85%;
}

.number-card{
    padding: 13px;
    flex-flow: column nowrap !important;
    justify-content: flex-start !important;
    
    background-color: transparent;
    flex-grow: 1;
    margin: 0.4%;
    align-items: center;
    align-content: center;
}


.number-card-label{
    font-size: 0.69rem;
    font-style: italic;
    text-align: center;
}
  
.percent-number {font: 690 20px system-ui;}
.indicator-number{font-size: 0.6rem;}


.Overview-graphs:hover, .number-card:hover, .Recently-graphs:hover{
    border: 1px ridge white;
    box-shadow: inset 0 0 0.5em 0 white, 0 0 0.5em 0 white;
}

article.expanding-row{
    display: flex;
    justify-content: space-between;
    flex-grow: 1;
    flex-flow: row wrap;
    align-items: stretch;
    row-gap: 6%;
    column-gap: 3px;
    align-content: center;
}


.number-card, .Overview-graphs{
    border: var(--card-border);
    border-radius: 12px;
}

#ep_dist_overview_mla, #rating_dist_overview_mla{
    width: calc(169px + 1.75vw);
    box-sizing: border-box;
    height: 260px;
    min-height: 180px;
    padding: 2px;
}

#rating_dist_overview_mla {flex-grow: .5;}
#ep_dist_overview_mla{flex-grow: 1;}

#special_belt{padding: 6px; height: 135px; width: calc(100vw - 40px);}

.anime_card, .Overview-graphs, .number-card, .recent_anime, .Recently-graphs {
  border: 1px solid rgba(150, 150, 150, 0.2);
  border-radius: 5px;
  transition: var(--standard-transition);
  margin-right: 0px;
  box-shadow: var(--hard-chocolate);
}

div.Overview-graphs:hover, .number-card:hover, .anime_card:hover, .Recently-graphs:hover, .recent_anime:hover{
    background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.1), transparent);
    box-shadow: inset 5px 5px 20px rgba(255, 255, 255, 0.1);
}

#currently_airing_cards{
    min-width: calc(200px + 1.75vw) !important;
    flex-grow: 2;
    box-sizing: border-box;
    max-width: 245px;
}

#currently_airing_cards .swiper-slide{
    background-color: rgb(23, 23, 23);
    box-shadow: var(--hard-chocolate);
    padding: 6px;
}

#time_spent{
    width: 200px;
    flex-shrink: 1;
}

#time_spent .swiper-slide{
    height: 45px;
    margin-top: auto;
    margin-bottom: auto;
    width: 85%;
}

.airing_cards{min-width: 298px;}

.rightFix{
    position: fixed;
    top: 25%;
    right: 2px;
    writing-mode: vertical-rl;
}

#quick-update-history{
    width: calc(200px + 2.5vw);
    height: 280px;
    flex-grow: 1;
}

#daily-weightage{
    height: 280px;
    flex-grow: 1;
    width: calc(200px + 2vw);
    min-width: 300px;
}

#weekly-progress-recently-view{
    width: calc(150px + 30vw);
    height: 208px;
    flex-grow: 1;
}

#special_belt_for_recent_animes{
    height: 140px;
    width: calc(150px + 30vw);
    flex-grow: 1.5;
    padding: 10px;
}

.recent_anime{padding: 6px; flex-direction: column !important;} /*don't remove flex-direction someone is making it row*/

.special-thing{
    position: absolute;
    bottom: 19px;
    right: 9px;
    transition: var(--standard-transition);
    padding: 2px;
}

.special-thing:hover{
    font-size: 2rem;
    background-color: black;
    box-shadow: var(--hard-chocolate);
}

